# Glaurung

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
lib/card/: glaurung_agent_card.py
lib/chat_orchestrator/: chat_orchestrator.py
lib/ollama_wrapper/: SYSTEM_PROMPT.py  ollama_wrapper.py
lib/ollama_wrapper/tools/: available_tools.py  read_file.py
lib/prompts/: SYSTEM_PROMPT.py
lib/utils/: get_message_status.py
models/: client_chat_response.py
models/chat/: chat_message.py  ollama_message.py  ollama_roles.py
models/requests/: chat_stream_request.py
models/responses/: client_chat_response.py
