[project]
name = "glaurung"
version = "0.1.0"
description = "A custom agentic system with local inference."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "a2a-sdk>=1.1.0",
    "fastapi[standard]>=0.139.0",
    "google>=3.0.0",
    "ollama>=0.6.2",
    "protobuf>=6.33.6",
    "pydantic>=2.13.4",
    "uuid>=1.30",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "ty>=0.0.56",
    "pre-commit>=4.6.0",
]
